Button groups can span multiple pages

The code needs to be aware of that.

BUG: 479942